Add extraJvmArguments for spark module issue